--- a/Final_Celerates/makanan.html
+++ b/Final_Celerates/makanan.html
@@ -63,7 +63,7 @@
         <div class="content">
             <div class="product-grid">
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 1" src="kategori makanan/Gethuk.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 2" src="kategori makanan/Onde - Onde, Khas Jawa Tengah.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 3" src="kategori makanan/wajik.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 4" src="kategori makanan/lumpia.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 5" src="kategori makanan/wingko.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 6" src="kategori makanan/serabi.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 7" src="kategori makanan/Jenang Mubarok, Oleh2 Kudus.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 8" src="kategori makanan/Roti ganjel rel.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 9" src="kategori makanan/latopia tegal.jpg"/>
                     <div class="product-info">
                         <div>
