--- a/Final_Celerates/pakaian.html
+++ b/Final_Celerates/pakaian.html
@@ -60,7 +60,7 @@
         <div class="content">
             <div class="product-grid">
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 1" src="image project2/batik pria.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 2" src="image project2/batik biru.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 3" src="image project2/batik kebumen.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 4" src="image project2/batik blazer oren.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 5" src="image project2/baju lurik.jpg"/>
                     <div class="product-info">
                         <div>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 6" src="image project2/kebaya jadul.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 7" src="image project2/batikoriginal.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 8" src="image project2/blouse kekinian.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 9" src="image project2/Nonarara Batik.jpeg"/>
                     <div class="product-info">
                         <div>
